# model-guru

./: .gitignore  README.md  app.yml  databricks.yml  package.json  prompt_03_07.md  pyproject.toml  tsconfig.json
docs/: biz_questions.csv
docs/plans/: 2026-03-07-model-guru-design.md  2026-03-07-model-guru-implementation.md
src/model_guru/ui/: index.html
src/model_guru/ui/components/wizard/: StepDeploy.tsx  StepDiscover.tsx  StepInput.tsx  StepMap.tsx  StepParse.tsx  StepReview.tsx  WizardShell.tsx
src/model_guru/ui/lib/: api.ts  wizard-context.tsx
src/model_guru/ui/routes/: index.tsx
src/model_guru/ui/routes/_sidebar/: route.tsx
